Fix home overflow

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,5 +1,6 @@
 #grad-paa-home {
     overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
